@@ -1,4 +1,9 @@
 
+=== (next) ===
+BREAKING: "any" is not allowed to be "undefined" anymore
+BREAKING: "any" is allowed to be null now
+FIXED: check failure when "any" is used in type variant or custom type
+
 === 1.5.0 (2017-09-03) ===
 BREAKING: changed futoin-asyncsteps to be peer dependency
 FIXED: CCM.assertIface() to handle check for inheritted interfaces
